I made all the html stuff

--- a/recipes/pelmeni.html
+++ b/recipes/pelmeni.html
@@ -14,7 +14,7 @@
     <ul>
         <li>pack of pelmeni (430 g)</li>
         <li>sauce (sour, mayonese, ketchup, whatever u want)</li>
-        <li>seasoning</li>
+        <li>seasoning (1 g)</li>
     </ul>
     <h3>Steps</h3>
     <ol>
