--- a/recipes/ruki.html
+++ b/recipes/ruki.html
@@ -12,7 +12,7 @@
     <p>This dish is rich in various vitamins as it contains human tendons... However, this dish will not be easy for you, because the main ingredient is hard work, but it's worth it...</p>
     <h3>Ingredients</h3>
     <ul>
-        <li>one more human (more the better)</li>
+        <li>human - 1 peace (more the better)</li>
         <li>that's all :)</li>
     </ul>
     <h3>Steps</h3>
