--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1>Top Odin Recipes</h1>
-    <ul>
+    <ol reversed>
         <li><a href="recipes/pelmeni.html">Pelmeni</a></li>
         <li><a href="recipes/ruki.html">RUKI</a></li>
-        <li></li>
-    </ul>    
+        <li><a href="recipes/head.html">GOLOVA</a></li>
+    </ol>    
 </body>
 </html>
