--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Top Odin Recipes</h1>
     <ol reversed>
-        <li><a href="recipes/pelmeni.html">Pelmeni</a></li>
-        <li><a href="recipes/ruki.html">RUKI</a></li>
-        <li><a href="recipes/head.html">GOLOVA</a></li>
+        <li><a href="recipes/pelmeni.html" target="_blank" rel="noopener noreferrer">Pelmeni</a></li>
+        <li><a href="recipes/ruki.html" target="_blank" rel="noopener noreferrer">RUKI</a></li>
+        <li><a href="recipes/head.html" target="_blank" rel="noopener noreferrer">GOLOVA</a></li>
     </ol>    
 </body>
 </html>
